--- a/src/frontend/frontend_playground/test2.html
+++ b/src/frontend/frontend_playground/test2.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@100&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="../css/textEditor/editorSpawnables.css">
     <link rel="stylesheet" href="../css/general/themes.css">
     <link rel="stylesheet" href="../css/general/main.css">
@@ -15,65 +20,127 @@
             height: 100dvh;
             padding: 50px;
             background-color: rgb(255, 255, 255);
+            font-family: Poppins;
         }
 
-        .color-picker {
-            background-color: transparent;
-        }
+       .sticky-image-container {
+        width: 220px;
+        height: 220px;
+        background-color: rgb(255, 255, 255);
+        position: relative;
+        display: flex;
+        align-items: end;
+       }
+
+       .sticky-one {
+        position: absolute;
+        rotate: 5deg;
+        border-radius: 10px ;
+        width: 220px;
+        height: 220px;
+        background-color: rgb(177, 209, 255);
+       }
+
+       .sticky-two {
+        position: absolute;
+        rotate: 10deg;
+        border-radius: 10px ;
+        width: 190px;
+        height: 190px;
+        display: flex;
+        flex-direction: column;
+        row-gap: 20px;
+        align-items: center;
+        justify-content: center;
+        background-color: rgb(141, 177, 255);
+       }
+
+       .sticky-two .line {
+        height: 7px;
+        border-radius: 5px;
+        background-color: rgb(91, 125, 224);
+       }
+
+       .pin {
+        position: absolute;
+        width: 15px;
+        height: 15px;
+        border-radius: 50%;
+        background-color: rgb(231, 237, 255);
+        z-index: 1;
+        top: 20px;
+        left: 30px;
+       }
+
+       .sticky-boards {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+        grid-template-rows: repeat(auto-fill, 200px);
+        gap: 20px;
+       }
+
+       .sticky-board {
+        cursor: pointer;
+        display: grid;
+        grid-template-rows: 1fr 1fr;
+        box-shadow: 5px 5px 18px #eaecf7;
+        border-radius: 10px;
+        transition: 200ms;
+       }
+
+       .sticky-board:hover {
+        scale: 1.05;
+       }
+
+       .sticky-board i {
+        margin: auto;
+        font-size: 30px;
+        color: #5c7fdd;
+       }
+
+       .sticky-board div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+       }
+
+       .sticky-board p {
+        margin: 0;
+       }
+
+       .sticky-board span {
+        color: #c9ccdc;
+       }
 
         
     </style>
 </head>
 <body>
-    <div class="rich-text-option-container">
-        <div class="btn-group">
-            <button id="boldBtn" onclick="formatText('bold')"><i class="bi bi-type-bold"></i></button>
-            <button id="italicBtn" onclick="formatText('italic')"><i class="bi bi-type-italic"></i></button>
-            <button id="underlineBtn" onclick="formatText('underline')"><i class="bi bi-type-underline"></i></button>
-            <button id="strikeBtn" onclick="formatText('strikethrough')"><i class="bi bi-type-strikethrough"></i></button>
-            <button onclick="formatText('createLink')"><i class="bi bi-link-45deg"></i></button>
+    <div class="sticky-image-container">
+        <div class="pin"></div>
+        <div class="sticky-one"></div>
+        <div class="sticky-two">
+            <div class="line" style="width: 50%;"></div>
+            <div class="line" style="width: 70%;"></div>
+            <div class="line" style="width: 60%;"></div>
         </div>
-        <div class="btn-group">
-            <button onclick="formatText('justifyLeft')"><i class="bi bi-text-left"></i></button>
-            <button id="centerAlignBtn" onclick="formatText('justifyCenter')"><i class="bi bi-text-center"></i></button>
-            <button id="rightAlignBtn" onclick="formatText('justifyRight')"><i class="bi bi-text-right"></i></button>
-        </div>
-        <div class="btn-group">
-            <button onclick="formatText('insertUnorderedList')"><i class="bi bi-list-task"></i></button>
-            <button onclick="formatText('insertOrderedList')"><i class="bi bi-list-ol"></i></button>
-        </div>
-        <div class="btn-group">
-            <button onclick="formatText('removeFormat')"><i class="fa-solid fa-text-slash" style="font-size: 15px;"></i></button>
-        </div>
-        <div class="btn-group">
-            <div class="color-dropdown">
-                <button><i class="bi bi-eyedropper"></i></button>
-                <ul>
-
-                    <li style="background-color: #f36f6f"></li>
-                    <li style="background-color: #728cff"></li>
-                    <li style="background-color: #a16eff"></li>
-                    <li style="background-color: #e632e6"></li>
-                    <li style="background-color: #80ca4f"></li>
-                    <li style="background-color: #efb35f"></li>
-                    <li style="background-color: #69c5e3"></li>
-
-                    <li style="background-color: #000000"></li>
-                    <li style="background-color: #2f3037"></li>
-                    <li style="background-color: #4e505c"></li>
-                    <li style="background-color: #a4a4b3"></li>
-                    <li style="background-color: #c0c0d8"></li>
-                    <li style="background-color: #d3d3db"></li>
-                    <li style="background-color: #ffffff" style="border: 1px solid #dddddd;"></li>
-
-                </ul>
+    </div>
+    <div class="sticky-boards">
+        <div class="sticky-board">
+            <i class="bi bi-stickies"></i>
+            <div>
+                <p>Brainstorm app features</p>
+                <span>19 stickies</span>
             </div>
         </div>
-      </div>
-      <p style="margin-top: 500px; color: #d3d3db;  font-size: 20px;">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni soluta commodi dignissimos quaerat quia reprehenderit illo repellat, voluptatum accusamus aperiam. Ad voluptatibus totam perferendis sit at dicta maxime nulla esse?
-      </p>
-      <h1>Hello world</h1>
+        <div class="sticky-board">
+            <i class="bi bi-layout-three-columns"></i>
+            <div>
+                <p>Task tracking photon</p>
+                <span>30 stickies</span>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
